updated myorg to elixirtw

--- a/ansible/roles/app/defaults/main.yml
+++ b/ansible/roles/app/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # A unique prefix for our directories
 # This could be your organization or the overall project
-org: myorg
+org: elixirtw
 
 # The external name of the app, used to name directories and the systemd process
 app_name: deploy-template
