--- a/ansible/inventory/group_vars/build-servers/vars.yml
+++ b/ansible/inventory/group_vars/build-servers/vars.yml
@@ -2,6 +2,7 @@
 
 # App git repo
 app_repo: https://github.com/elixirtw/elixir_tw
+app_branch: ansible-deploy
 
 # Users who can ssh into the deploy account
 # This is needed to run the build and deploy scripts
