--- a/ansible/playbooks/setup-build.yml
+++ b/ansible/playbooks/setup-build.yml
@@ -96,3 +96,4 @@
       git:
         repo: "{{ app_repo }}"
         dest: "{{ build_dir }}"
+        version: "{{ app_branch | default("master")}}"
