--- a/assets/package.json
+++ b/assets/package.json
@@ -8,8 +8,8 @@
     "font-awesome": "^4.7.0",
     "javascript-brunch": "~2.0.0",
     "jquery": "^3.2.1",
-    "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html",
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html",
     "popper.js": "^1.12.2",
     "sass-brunch": "^2.7.0",
     "simplemde": "^1.11.2"
